# TonexOneController_CustomUI

./: README.md
.claude/: settings.local.json
build_distrib/: build_distrib.py
docs/: index.html  manifest.json
export/: DESIGN_SPEC.md  README.md  tonex-controller-interactive-standalone.html  tonex-controller-standalone.html
export/source/: Screens.html  ToneX Controller.html  app.jsx  pedalboard.jsx  screens-app.jsx  shared.jsx
licenses/MPlusU/: OFL.txt
simulator/: CMakeLists.txt  README.md  gdb.cmd  lv_conf.h  main.c  post_eez_patch.ps1  stub_actions.c
source/: esp_idf_project_configuration.json  partitions_16MB.csv  sdkconfig.pirate169  sdkconfig.pirate169land  sdkconfig.ws35b
source/.claude/: settings.local.json
source/main/: CMakeLists.txt  control.c  display.c  display_tonex.c  footswitches.c  midi_helper.c  platform_ws35b.c  platform_ws43.c  wifi_config.c
source/main/ui_generated_480x320land/: .eez-project-build  fonts.h  images.c  images.h  screens.c  screens.h  screens_compat.c  screens_compat.h  styles.c  styles.h  ui_font_anton_14.c  ui_font_anton_28.c  ui_font_anton_36.c  ui_font_anton_40.c  ui_font_anton_58.c  ui_font_anton_80.c  ui_font_m_plus_u_bold_10.c  ui_font_m_plus_u_bold_14.c  ui_font_m_plus_u_bold_16.c  ui_image_bt_conn.c  ui_image_bt_disconn.c  ui_image_effect_icon_amp_off.c  ui_image_effect_icon_amp_on.c  ui_image_effect_icon_cab_off.c  ui_image_effect_icon_cab_on.c  ui_image_effect_icon_comp_off.c  ui_image_effect_icon_comp_on.c  ui_image_effect_icon_delay_off.c  ui_image_effect_icon_delay_on.c  ui_image_effect_icon_delay_on_d.c  ui_image_effect_icon_delay_on_t.c  ui_image_effect_icon_eq.c  ui_image_effect_icon_gate_off.c  ui_image_effect_icon_gate_on.c  ui_image_effect_icon_mod_off.c  ui_image_effect_icon_mod_on.c  ui_image_effect_icon_mod_on_chorus.c  ui_image_effect_icon_mod_on_flanger.c  ui_image_effect_icon_mod_on_phaser.c  ui_image_effect_icon_mod_on_rotary.c  (+20 more)
source/main/ui_handwritten_480x320land/: .eez-project-build  actions.h  images.c  images.h  screens.c  screens.h  tonex_theme.h  ui_image_amp_disabled.c  ui_image_amp_off.c  ui_image_amp_on.c  ui_image_arrow_left.c  ui_image_arrow_right.c  ui_image_bt_conn.c  ui_image_bt_disconn.c  ui_image_cab_disabled.c  ui_image_cab_off.c  ui_image_cab_on.c  ui_image_dly_off.c  ui_image_dly_on.c  ui_image_dst_off.c  ui_image_dst_on.c  ui_image_effect_icon_amp_off.c  ui_image_effect_icon_amp_on.c  ui_image_effect_icon_cab_off.c  ui_image_effect_icon_cab_on.c  ui_image_effect_icon_comp_off.c  ui_image_effect_icon_comp_on.c  ui_image_effect_icon_delay_off.c  ui_image_effect_icon_delay_on.c  ui_image_effect_icon_delay_on_d.c  ui_image_effect_icon_delay_on_t.c  ui_image_effect_icon_eq.c  ui_image_effect_icon_gate_off.c  ui_image_effect_icon_gate_on.c  ui_image_effect_icon_mod_off.c  ui_image_effect_icon_mod_on.c  ui_image_effect_icon_mod_on_chorus.c  ui_image_effect_icon_mod_on_flanger.c  ui_image_effect_icon_mod_on_phaser.c  ui_image_effect_icon_mod_on_rotary.c  (+82 more)
source/main/web/: script.js
source/tools/: restore_compat_stubs.ps1
